--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.siccity.gltfutility": "https://github.com/Siccity/GLTFUtility.git",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.cinemachine": "2.10.3",
     "com.unity.collab-proxy": "2.5.2",
